ros2_ws/log/build_2025-01-14_01-21-26/mypkg/stderr.log
  File "/home/koara/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 10
    if request.name= "武田遊星"
                   ^
SyntaxError: invalid syntax

